--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Instalar dependencies
-    - run: npm install
+      run: npm install
 
     - name: Executar testes unitários
-    - run: npm test
+      run: npm test
